--- a/_sass/_themes.scss
+++ b/_sass/_themes.scss
@@ -3,6 +3,9 @@
  ******************************************************************************/
 
 @use "sass:color";
+@use "sass:math";
+@use "sass:string";
+@use "sass:map";
 
 :root {
   color-scheme: light;
